--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,6 @@ export(cbi_base_theme)
 export(cbi_base_weirdblue)
 export(cbi_base_white)
 export(format_axis_labels_short)
+export(format_financial_data)
 importFrom(ggplot2,.pt)
 importFrom(ggplot2,update_geom_defaults)
