color edits + checks passing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: CBIthemingR
 Type: Package
-Title: Standardized Plot Theming for Constellation Brands, Inc. 
+Title: Standardized Plot Theming for Constellation Brands, Inc. Data Science Team 
 Version: 0.1.0
 Authors@R: c(
     person(given = "Jessie", family = "Huang", email = "jessie.huang@cbrands.com",
@@ -13,7 +13,8 @@ LazyData: true
 Imports:
 	dplyr,
 	ggplot2,
-	grDevices
+	grDevices,
+	assertthat
 RoxygenNote: 7.2.3
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
