check failing! but the code isn't plagairized anymore

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ LazyData: true
 Imports:
 	dplyr,
 	ggplot2,
-	grDevices,
-	assertthat
+	grDevices
 RoxygenNote: 7.2.3
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
