--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,15 @@
 .Rhistory
 .RData
 .Ruserdata
+DESCRIPTION
+LICENSE
+LICENSE.md
+NAMESPACE
+README.md
+renv.lock
 /doc/
 /Meta/
+/man/
+/R/
+/renv/
+/vignettes/
